WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123601
[GTK] invalid use of incomplete type 'class WTF::PassOwnPtr<WTF::Vector<unsigned char> >'
https://bugs.webkit.org/show_bug.cgi?id=123601
Summary
[GTK] invalid use of incomplete type 'class WTF::PassOwnPtr<WTF::Vector<unsig...
Emilio Pozuelo Monfort
Reported
2013-10-31 17:22:12 PDT
Building webkitgtk 2.3.1 with GCC 4.8 after applying the fix in
bug 123502
I get: ../Source/WebKit2/WebProcess/Plugins/Netscape/NetscapePluginStream.cpp: In member function 'void WebKit::NetscapePluginStream::deliverData(const char*, int)': ../Source/WebKit2/WebProcess/Plugins/Netscape/NetscapePluginStream.cpp:189:58: error: invalid use of incomplete type 'class WTF::PassOwnPtr<WTF::Vector<unsigned char> >' m_deliveryData = adoptPtr(new Vector<uint8_t>); ^ In file included from ../Source/WebCore/platform/FileSystem.h:34:0, from ./DerivedSources/WebKit2/include/WebCore/FileSystem.h:1, from ../Source/WebKit2/WebProcess/Plugins/Netscape/NetscapePluginStream.h:31, from ../Source/WebKit2/WebProcess/Plugins/Netscape/NetscapePluginStream.cpp:27: ../Source/WTF/wtf/Forward.h:30:28: error: declaration of 'class WTF::PassOwnPtr<WTF::Vector<unsigned char> >' template<typename T> class PassOwnPtr; ^ make[2]: *** [Source/WebKit2/WebProcess/Plugins/Netscape/Programs_WebKitPluginProcess-NetscapePluginStream.o] Error 1
Attachments
Speculative fix
(471 bytes, patch)
2013-11-01 02:43 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
config.log
(87.34 KB, text/x-log)
2013-11-01 05:01 PDT
,
Emilio Pozuelo Monfort
no flags
Details
Patch
(1.23 KB, patch)
2013-11-02 03:15 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2013-11-01 02:43:47 PDT
Created
attachment 215726
[details]
Speculative fix This patch just includes the PassOwnPtr.h header -- can you try it out and report back if it fixes the problem? If the problem persists or you don't have the time to test the patch out, please attach the config.log file so someone else can try to replicate the problem and provide further fixes. Thanks!
Emilio Pozuelo Monfort
Comment 2
2013-11-01 05:01:46 PDT
Created
attachment 215730
[details]
config.log
Emilio Pozuelo Monfort
Comment 3
2013-11-01 05:02:57 PDT
(In reply to
comment #1
)
> Created an attachment (id=215726) [details] > Speculative fix > > This patch just includes the PassOwnPtr.h header -- can you try it out and report back if it fixes the problem?
Sure, will start a build later today and report back.
> If the problem persists or you don't have the time to test the patch out, please attach the config.log file so someone else can try to replicate the problem and provide further fixes.
Attached just in case. Will do so from the start for future reports.
Emilio Pozuelo Monfort
Comment 4
2013-11-01 18:25:48 PDT
(In reply to
comment #3
)
> (In reply to
comment #1
) > > Created an attachment (id=215726) [details] [details] > > Speculative fix > > > > This patch just includes the PassOwnPtr.h header -- can you try it out and report back if it fixes the problem? > > Sure, will start a build later today and report back.
The patch worked nicely!
Zan Dobersek
Comment 5
2013-11-02 03:15:27 PDT
Created
attachment 215805
[details]
Patch
Zan Dobersek
Comment 6
2013-11-02 07:32:47 PDT
Comment on
attachment 215805
[details]
Patch Clearing flags on attachment: 215805 Committed
r158487
: <
http://trac.webkit.org/changeset/158487
>
Zan Dobersek
Comment 7
2013-11-02 07:32:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug