[GTK] invalid use of incomplete type 'class WTF::PassOwnPtr<WTF::Vector<unsigned char> >' https://bugs.webkit.org/show_bug.cgi?id=123601

Reviewed by Carlos Garcia Campos.

* WebProcess/Plugins/Netscape/NetscapePluginStream.cpp: Explicitly include the PassOwnPtr.h header
as certain configurations on the GTK port don't ensure that the header is included indirectly.


Canonical link: https://commits.webkit.org/141840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158487 268f45cc-cd09-0410-ab3c-d52691b4dbfc